--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         }
     ],
     "require": {
-		"php": ">=5.4.0",
-        "ext-iconv": "*",
-        "ext-json": "*",
-        "ext-simplexml": "*"
+		"php": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0.0"
     },
 	"autoload": {
         "psr-4": {
