--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fize/crypt",
-    "description": "various encoding and decoding class libraries.",
+    "description": "各式各样的编码解码类库",
     "license": "Apache-2.0",
     "authors": [
         {
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-		"php": ">=5.4.0"
+		"php": ">=5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0.0"
