--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-    "name": "fize/crypt",
-    "description": "各式各样的编码解码类库",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "FizeChan",
-            "email": "chenfengzhan@qq.com"
-        }
-    ],
-    "require": {
-		"php": ">=5.4.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.0.0"
-    },
-    "suggest": {
-        "ext-json": "*"
-    },
-	"autoload": {
-        "psr-4": {
-            "fize\\crypt\\": "src"
-        }
+  "name": "fize/crypt",
+  "description": "各式各样的编码解码类库",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "FizeChan",
+      "email": "chenfengzhan@qq.com"
     }
+  ],
+  "require": {
+    "php": ">=5.5"
+  },
+  "require-dev": {
+    "ext-json": "*",
+    "ext-simplexml": "*",
+    "phpunit/phpunit": "~9.1"
+  },
+  "suggest": {
+    "ext-json": "*",
+    "ext-simplexml": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "fize\\crypt\\": "src"
+    }
+  }
 }
